--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
 *.iml
 .gradle
 /local.properties
-/.idea/*
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-/.idea/.name
-/.idea/codeStyles/Project.xml
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/runConfigurations.xml
-/.idea/vcs.xml
-
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-
-*log.txt
+local.properties
