--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.window:window:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
 }
