ｏｖｅｎ░ｉｓ░ｎｏｗ░ｆｉｘｅｄ　（猿宇駅臆）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.window:window:1.0.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.5'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
